<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Q6">

    <LinearLayout
        android:layout_width="381dp"
        android:layout_height="262dp"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal">

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/g0"
            android:layout_width="230dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/garden0"
            android:src="@drawable/garden0"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp" />

        <TextView
            android:layout_width="384dp"
            android:layout_height="62dp"
            android:layout_gravity="center"
            android:background="@color/primaryColor"
            android:fontFamily="cursive"
            android:paddingTop="12dp"
            android:shadowColor="@color/colorNavigation"
            android:shadowDx="10"
            android:shadowDy="10"
            android:shadowRadius="15"
            android:text="@string/q6page"
            android:textAlignment="center"
            android:textColor="#FFFFFF" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/you_scored" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_gravity="center_horizontal"
            android:textSize="36sp"
            android:id="@+id/pointsAwarded"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/points_out_of_6_possible" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        android:layout_gravity="center_horizontal">

        <ImageButton
            android:id="@+id/homeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/home"
            android:src="@android:drawable/ic_dialog_dialer" />

    </LinearLayout>

    <Button
        android:id="@+id/checkBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/buttonColor"
        android:text="@string/check" />
</LinearLayout>