<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Q3">

    <LinearLayout
        android:layout_width="381dp"
        android:layout_height="262dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal">

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/g0"
            android:layout_width="230dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/garden3"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp" />

        <TextView
            android:layout_width="384dp"
            android:layout_height="62dp"
            android:layout_gravity="center"
            android:background="@color/primaryColor"
            android:shadowColor="@color/colorNavigation"
            android:shadowDx="10"
            android:shadowDy="10"
            android:shadowRadius="15"
            android:paddingTop="3dp"
            android:text="@string/q3page"
            android:textAlignment="center"
            android:fontFamily="cursive"
            android:textColor="#FFFFFF" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sunflower"
            android:id="@+id/chbx1"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verbena"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daffodil"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daisy"/>
    </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/submitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/buttonColor"
                android:onClick="submitAnswer"
                android:text="@string/submit" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp">

            <ImageButton
                android:id="@+id/homeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:baselineAlignBottom="true"
                android:contentDescription="@string/home"
                android:src="@android:drawable/ic_dialog_dialer" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>