<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Q2">

    <LinearLayout
        android:layout_width="381dp"
        android:layout_height="262dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="2dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="32dp"
        android:baselineAligned="false"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/g0"
            android:layout_width="230dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/garden2"
            android:src="@drawable/garden2"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp" />

        <TextView
            android:layout_width="384dp"
            android:layout_height="62dp"
            android:layout_gravity="center"
            android:background="@color/primaryColor"
            android:fontFamily="cursive"
            android:paddingTop="2dp"
            android:shadowColor="@color/colorNavigation"
            android:shadowDx="10"
            android:shadowDy="10"
            android:shadowRadius="15"
            android:text="@string/q2page"
            android:textAlignment="center"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <RadioButton
                android:id="@+id/q2r1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rbtrue" />

            <RadioButton
                android:id="@+id/q2r2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rbfalse" />

        </RadioGroup>

    </LinearLayout>




    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:background="@color/buttonColor"
                android:id="@+id/submitButton"
                android:onClick="submitAnswer"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_dialog_dialer"
                android:id="@+id/homeButton"
                android:contentDescription="@string/home"/>
        </LinearLayout>


    </LinearLayout>
</LinearLayout>