<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="381dp"
        android:layout_height="262dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="32dp"
        android:baselineAligned="false"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        android:layout_marginStart="2dp">

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/g0"
            android:layout_width="230dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/garden0"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp" />

        <TextView
            android:layout_width="384dp"
            android:layout_height="62dp"
            android:layout_gravity="center"
            android:background="@color/primaryColor"
            android:fontFamily="cursive"
            android:paddingTop="12dp"
            android:shadowColor="@color/colorNavigation"
            android:shadowDx="10"
            android:shadowDy="10"
            android:shadowRadius="15"
            android:text="@string/garden_quiz"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="32sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="3"
        tools:layout_editor_absoluteX="6dp"
        tools:layout_editor_absoluteY="288dp"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@color/secondaryLightColor"
            android:orientation="vertical"
            android:onClick="question1"
            android:id="@+id/LL1"
            >

            <ImageButton
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/garden0"
                android:onClick="question1"
                android:src="@drawable/garden1" />

            <TextView
                android:id="@+id/q1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:background="@color/secondaryColor"
                android:onClick="question1"
                android:padding="8dp"
                android:text="@string/q1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@color/primaryLightColor"
            android:orientation="vertical"
            android:onClick="question2"
            android:id="@+id/LL2">

            <ImageButton
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/garden2"
                android:onClick="question2"
                android:src="@drawable/garden2" />

            <TextView
                android:id="@+id/q2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:background="@color/primaryColor"
                android:onClick="question2"
                android:padding="8dp"
                android:text="@string/q2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@color/secondaryColor"
            android:orientation="vertical"
            android:onClick="question3"
            android:id="@+id/LL3">

            <ImageButton
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/garden3"
                android:onClick="question3"
                android:src="@drawable/garden3" />

            <TextView
                android:id="@+id/q3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:background="@color/primaryLightColor"
                android:onClick="question3"
                android:padding="8dp"
                android:text="@string/q3" />
        </LinearLayout>

    </LinearLayout>


    <!--Second Row!-->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="3"
        tools:layout_editor_absoluteX="6dp"
        tools:layout_editor_absoluteY="436dp"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@color/primaryDarkColor"
            android:orientation="vertical"
            android:onClick="question4"
            android:id="@+id/LL4">

            <ImageButton
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/garden4"
                android:onClick="question4"
                android:src="@drawable/garden4" />

            <TextView
                android:id="@+id/q4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:background="@color/secondaryLightColor"
                android:onClick="question4"
                android:padding="8dp"
                android:text="@string/q4" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@color/secondaryColor"
            android:orientation="vertical"
            android:onClick="question5"
            android:id="@+id/LL5">

            <ImageButton
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/garden5"
                android:onClick="question5"
                android:src="@drawable/garden5" />

            <TextView
                android:id="@+id/q5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:background="@color/secondaryDarkColor"
                android:onClick="question5"
                android:padding="8dp"
                android:text="@string/q5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@color/secondaryDarkColor"
            android:orientation="vertical"
            android:onClick="question6"
            android:id="@+id/LL6">

            <ImageButton
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/garden0"
                android:onClick="question6"
                android:src="@drawable/garden0" />

            <TextView
                android:id="@+id/q6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:background="@color/primaryColor"
                android:padding="8dp"
                android:text="@string/q6"
                android:onClick="question6"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>